grammar.js
		program: ($) =>
			seq(
				optional($._statements),
				optional(choice(seq(/__END__/, $.uninterpreted))),
			),

		block_body: ($) => $._statements,

		_statements: ($) =>
			choice(
				seq(
					repeat1(choice(seq($._statement, $._terminator), $.empty_statement)),
					optional($._statement),
				),
				$._statement,
			),

		_statement: ($) =>
			choice(
				$.undef,
				$.alias,
				$.if_modifier,
				$.unless_modifier,
				$.while_modifier,
				$.until_modifier,
				$.rescue_modifier,
				$.begin_block,
				$.end_block,
				$._expression,
			),

		method: ($) => seq("def", $._method_rest),

		singleton_method: ($) =>
			seq(
				"def",
				seq(
					choice(
						field("object", $._variable),
						seq("(", field("object", $._arg), ")"),
					),
					choice(".", "::"),
				),
				$._method_rest,
			),

		_method_rest: ($) =>
			seq(
				field("name", $._method_name),
				choice(
					$._body_expr,
					seq(
						field("parameters", alias($.parameters, $.method_parameters)),
						choice(
							seq(
								optional($._terminator),
								optional(field("body", $.body_statement)),
								"end",
							),
							$._body_expr,
						),
					),
					seq(
						optional(
							field(
								"parameters",
								alias($.bare_parameters, $.method_parameters),
							),
						),
						$._terminator,
						optional(field("body", $.body_statement)),
						"end",
					),
				),
			),

		block_parameters: ($) =>
			seq(
				"|",
				seq(commaSep($._formal_parameter), optional(",")),
				optional(seq(";", sep1(field("locals", $.identifier), ","))), // ブロックシャドウ引数 例: {|; a, b| ...}
				"|",
			),

		_formal_parameter: ($) =>
			choice(
				$._simple_formal_parameter,
				alias($.parameters, $.destructured_parameter),
			),

		splat_parameter: ($) =>
			prec.right(-2, seq("*", field("name", optional($.identifier)))),
		keyword_parameter: ($) =>
			prec.right(
				PREC.BITWISE_OR + 1,
				seq(
					field("name", identifierOrWhen($)),
					token.immediate(":"),
					field("value", optional($._arg)),
				),
			),
		optional_parameter: ($) =>
			prec(
				PREC.BITWISE_OR + 1,
				seq(field("name", $.identifier), "=", field("value", $._arg)),
			),

		class: ($) =>
			seq(
				"class",
				field("name", choice($.constant, $.scope_resolution)),
				choice(
					seq(field("superclass", $.superclass), $._terminator),
					optional($._terminator),
				),
				optional(field("body", $.body_statement)),
				"end",
			),

		return: ($) => prec.left(seq("return", optional($.argument_list))),
		break: ($) => prec.left(seq("break", optional($.argument_list))),
		next: ($) => prec.left(seq("next", optional($.argument_list))),
		if_modifier: ($) =>
			prec(
				PREC.RESCUE,
				seq(
					field("body", $._statement),
					"if",
					field("condition", $._expression),
				),
			),

		for: ($) =>
			seq(
				"for",
				field("pattern", choice(prec.dynamic(1, $._lhs), $.left_assignment_list)),
				field("value", $.in),
				field("body", $.do),
			),

		in: ($) => seq("in", $._arg),
		do: ($) => seq(choice("do", $._terminator), optional($._statements), "end"),

		_pattern_top_expr_body: ($) =>
			prec(
				-1,
				choice(
					$._pattern_expr,
					alias($._array_pattern_n, $.array_pattern),
					alias($._find_pattern_body, $.find_pattern),
					alias($._hash_pattern_body, $.hash_pattern),
				),
			),

		_pattern_expr: ($) => choice($.as_pattern, $._pattern_expr_alt),

		_array_pattern_body: ($) => choice($._pattern_expr, $._array_pattern_n),

		array_pattern: ($) =>
			prec.right(
				-1,
				choice(
					seq("[", optional($._array_pattern_body), "]"),
					seq(
						field("class", $._pattern_constant),
						token.immediate("["),
						optional($._array_pattern_body),
						"]",
					),
					seq(
						field("class", $._pattern_constant),
						token.immediate("("),
						optional($._array_pattern_body),
						")",
					),
				),
			),

		_hash_pattern_body: ($) =>
			prec.right(
				choice(
					seq(commaSep1($.keyword_pattern), optional(",")),
					seq(commaSep1($.keyword_pattern), ",", $._hash_pattern_any_rest),
					$._hash_pattern_any_rest,
				),
			),

		keyword_pattern: ($) =>
			prec.right(
				-1,
				seq(
					field(
						"key",
						choice(
							alias($.identifier, $.hash_key_symbol),
							alias("when", $.hash_key_symbol),
							alias($.constant, $.hash_key_symbol),
							alias($.identifier_suffix, $.hash_key_symbol),
							alias($.constant_suffix, $.hash_key_symbol),
							$.string,
						),
					),
					token.immediate(":"),
					optional(field("value", $._pattern_expr)),
				),
			),

		hash_pattern: ($) =>
			prec.right(
				-1,
				choice(
					seq("{", optional($._hash_pattern_body), "}"),
					seq(
						field("class", $._pattern_constant),
						token.immediate("["),
						$._hash_pattern_body,
						"]",
					),
					seq(
						field("class", $._pattern_constant),
						token.immediate("("),
						$._hash_pattern_body,
						")",
					),
				),
			),

		_pattern_constant: ($) =>
			prec.right(
				-1,
				choice(
					$.constant,
					alias($._pattern_constant_resolution, $.scope_resolution),
				),
			),

		body_statement: ($) => $._body_statement,

		_body_statement: ($) =>
			choice(
				seq($._statements, repeat(choice($.rescue, $.else, $.ensure))),
				seq(
					optional($._statements),
					repeat1(choice($.rescue, $.else, $.ensure)),
				),
			),

		// 括弧なしのメソッド呼び出し（コマンド呼び出し）は、文のトップレベル、
		// `if` などの後置制御フロー演算子の条件部、`return` の値など
		// 限られた位置でのみ許可される。
		//
		// この区別のため、多くのルールに通常版と "command" 版の 2 種類がある。
		// 通常版は式が有効な場所ならどこでも使えるが、command 版はコマンド呼び出しを
		// 含めるためより限定的な位置でのみ有効。
		//
		// `_expression` は使用箇所が少ないがコマンド呼び出しを含められる。
		// `_arg` はより多くの場所で使えるが、括弧で囲まない限りコマンド呼び出しは
		// 含められない。この命名規則は Ruby の標準文法に準拠している。
		_expression: ($) =>
			choice(
				alias($.command_binary, $.binary),
				alias($.command_unary, $.unary),
				alias($.command_assignment, $.assignment),
				alias($.command_operator_assignment, $.operator_assignment),
				alias($.command_call, $.call),
				alias($.command_call_with_block, $.call),
				prec.left(alias($._chained_command_call, $.call)),
				alias($.return_command, $.return),
				alias($.yield_command, $.yield),
				alias($.break_command, $.break),
				alias($.next_command, $.next),
				$.match_pattern,
				$.test_pattern,
				$._arg,
			),

		match_pattern: ($) =>
			prec(
				100,
				seq(
					field("value", $._arg),
					"=>",
					field("pattern", $._pattern_top_expr_body),
				),
			),

		_arg: ($) =>
			choice(
				alias($._unary_minus_pow, $.unary),
				$._primary,
				$.assignment,
				$.operator_assignment,
				$.conditional,
				$.range,
				$.binary,
				$.unary,
			),

		_primary: ($) =>
			choice(
				$.parenthesized_statements,
				$._lhs,
				alias($._function_identifier_call, $.call),
				$.call,
				$.array,
				$.string_array,
				$.symbol_array,
				$.hash,
				$.subshell,
				$._literal,
				$.string,
				$.character,
				$.chained_string,
				$.regex,
				$.lambda,
				$.method,
				$.singleton_method,
				$.class,
				$.singleton_class,
				$.module,
				$.begin,
				$.while,
				$.until,
				$.if,
				$.unless,
				$.for,
				$.case,
				$.case_match,
				$.return,
				$.yield,
				$.break,
				$.next,
				$.redo,
				$.retry,
				alias($.parenthesized_unary, $.unary),
				$.heredoc_beginning,
			),

		parenthesized_statements: ($) => seq("(", optional($._statements), ")"),

		element_reference: ($) =>
			prec.left(
				1,
				seq(
					field("object", $._primary),
					alias($._element_reference_bracket, "["),
					optional($._argument_list_with_trailing_comma),
					"]",
					optional(field("block", choice($.block, $.do_block))),
				),
			),

		_call_operator: (_) => choice(".", "&.", token.immediate("::")),
		_call: ($) =>
			prec.left(
				PREC.CALL,
				seq(
					field("receiver", $._primary),
					field("operator", $._call_operator),
					field(
						"method",
						choice(
							identifierOrWhen($),
							$.operator,
							$.constant,
							$._function_identifier,
						),
					),
				),
			),

		call: ($) => {
			const receiver = choice(
				$._call,
				field("method", choice($._variable, $._function_identifier)),
			);

			const args = field("arguments", $.argument_list);
			// `foo.(1)` (= `foo.call(1)`) はメソッド名が無いので、`.` の次に来られるのは
			// 引数リストだけ。**そこには改行を挟める** (`foo.` で行を終えて次行に `(1)`)。
			// 名前つきの `foo.bar (1)` と違って `(` を空白から切り離す必要がないので、
			// `token.immediate` を外した版をこの枝にだけ使う。
			const operatorArgs = field(
				"arguments",
				alias($._spaced_argument_list, $.argument_list),
			);
			const receiverArguments = choice(
				seq(receiver, args),
				seq(
					prec.left(
						PREC.CALL,
						seq(
							field("receiver", $._primary),
							field("operator", $._call_operator),
						),
					),
					operatorArgs,
				),
			);

			const block = field("block", $.block);
			const doBlock = field("block", $.do_block);
			// 引数リストを伴わない `foo { ... }` だけは、ハッシュ引数と
			// 取り違えないよう専用の `{` トークンを使う。
			const commandBlock = field("block", alias($._command_block, $.block));
			return choice(
				receiverArguments,
				prec(PREC.CURLY_BLOCK, seq(receiverArguments, block)),
				prec(PREC.DO_BLOCK, seq(receiverArguments, doBlock)),
				prec(PREC.CURLY_BLOCK, seq(receiver, commandBlock)),
				prec(PREC.DO_BLOCK, seq(receiver, doBlock)),
			);
		},

		argument_list: ($) =>
			prec.right(
				seq(
					token.immediate("("),
					optional($._argument_list_with_trailing_comma),
					")",
				),
			),

		// `.` `&.` `::` の直後に置く引数リスト。`token.immediate` を使わないので
		// **空白と改行を挟める**。`call` の `.()` の枝からだけ参照する。
		_spaced_argument_list: ($) =>
			prec.right(
				seq("(", optional($._argument_list_with_trailing_comma), ")"),
			),

		_argument_list_with_trailing_comma: ($) =>
			prec.right(seq(commaSep1($._argument), optional(","))),

		block_argument: ($) =>
			prec.right(seq(alias($._block_ampersand, "&"), optional($._arg))),

		do_block: ($) =>
			seq(
				"do",
				optional($._terminator),
				optional(
					seq(field("parameters", $.block_parameters), optional($._terminator)),
				),
				optional(field("body", $.body_statement)),
				"end",
			),

		block: ($) =>
			prec(
				PREC.CURLY_BLOCK,
				seq(
					"{",
					field("parameters", optional($.block_parameters)),
					optional(field("body", $.block_body)),
					"}",
				),
			),

		// 括弧なしのメソッド呼び出しの直後に来る `{` は、Ruby では常にブロック。
		// ハッシュを唯一の引数として渡すには `foo({...})` と括弧が必要で、
		// `foo { k => v }` の `=>` は rightward pattern match になる。
		// この位置の `{` を通常の `{` と字句レベルで区別しないと、
		// `argument_list > hash > pair` として読まれてしまう。
		_command_block: ($) =>
			prec(
				PREC.CURLY_BLOCK,
				seq(
					alias($._command_block_brace, "{"),
					field("parameters", optional($.block_parameters)),
					optional(field("body", $.block_body)),
					"}",
				),
			),

		_arg_rhs: ($) =>
			choice($._arg, alias($.rescue_modifier_arg, $.rescue_modifier)),
		assignment: ($) =>
			prec.right(
				PREC.ASSIGN,
				choice(
					seq(
						field("left", choice($._assignment_lhs, $.left_assignment_list)),
						"=",
						field(
							"right",
							choice($._arg_rhs, $.splat_argument, $.right_assignment_list),
						),
					),
				),
			),

		operator_assignment: ($) =>
			prec.right(
				PREC.ASSIGN,
				seq(
					field("left", $._assignment_lhs),
					field(
						"operator",
						choice(
							"+=",
							"-=",
							"*=",
							"**=",
							"/=",
							"||=",
							"|=",
							"&&=",
							"&=",
							"%=",
							">>=",
							"<<=",
							"^=",
						),
					),
					field("right", $._arg_rhs),
				),
			),

		conditional: ($) =>
			prec.right(
				PREC.CONDITIONAL,
				seq(
					field("condition", $._arg),
					"?",
					field("consequence", $._arg),
					":",
					field("alternative", $._arg),
				),
			),

		range: ($) => {
			const begin = field("begin", $._arg);
			const end = field("end", $._arg);
			const operator = field("operator", choice("..", "..."));
			return prec.right(
				PREC.RANGE,
				choice(
					// Ruby は範囲演算子の後の改行を常に継続として扱う (`x = 0..\n10` は
					// `x = (0..10)`)。`_no_line_break` はマッチしないトークンで、この位置で
					// 改行トークンを作らないようスキャナーに伝えるヒントとして置いている。
					seq(
						begin,
						operator,
						choice(seq(optional($._range_operand), optional(end)), $._no_line_break),
					),
					seq(operator, optional($._range_operand), end),
				),
			);
		},

		binary: ($) => {
			const operators = [
				[prec.left, PREC.AND, "and"],
				[prec.left, PREC.OR, "or"],
				[prec.left, PREC.BOOLEAN_OR, "||"],
				[prec.left, PREC.BOOLEAN_AND, "&&"],
				[
					prec.left,
					PREC.SHIFT,
					choice(alias($._binary_left_shift, "<<"), ">>"),
				],
				[prec.left, PREC.COMPARISON, choice("<", "<=", ">", ">=")],
				[prec.left, PREC.BITWISE_AND, alias($._binary_ampersand, "&")],
				[prec.left, PREC.BITWISE_OR, choice("^", "|")],
				[prec.left, PREC.ADDITIVE, choice("+", alias($._binary_minus, "-"))],
				[
					prec.left,
					PREC.MULTIPLICATIVE,
					choice("/", "%", alias($._binary_star, "*")),
				],
				[
					prec.right,
					PREC.RELATIONAL,
					choice("==", "!=", "===", "<=>", "=~", "!~"),
				],
				[prec.right, PREC.EXPONENTIAL, alias($._binary_star_star, "**")],
			];

			// @ts-expect-error
			return choice(
				...operators.map(([fn, precedence, operator]) =>
					fn(
						precedence,
						seq(
							field("left", $._arg),
							// @ts-expect-error
							field("operator", operator),
							field("right", $._arg),
						),
					),
				),
			);
		},

		unary: ($) => {
			const operators = [
				[prec, PREC.DEFINED, "defined?"],
				[prec.right, PREC.NOT, "not"],
				[
					prec.right,
					PREC.UNARY_MINUS,
					choice(alias($._unary_minus, "-"), alias($._binary_minus, "-"), "+"),
				],
				[prec.right, PREC.COMPLEMENT, choice("!", "~")],
			];
			// @ts-expect-error
			return choice(
				...operators.map(([fn, precedence, operator]) =>
					fn(
						precedence,
						seq(
							// @ts-expect-error
							field("operator", operator),
							field("operand", $._arg),
						),
					),
				),
			);
		},

		_function_identifier: ($) =>
			choice(
				alias($.identifier_suffix, $.identifier),
				alias($.constant_suffix, $.constant),
			),
		_assignment_lhs: ($) =>
			prec.left(
				choice(
					$._variable,
					$.true,
					$.false,
					$.nil,
					$.scope_resolution,
					alias($._element_reference_assignment, $.element_reference),
					alias($._call, $.call),
				),
			),
		_lhs: ($) =>
			prec.left(
				choice(
					$._variable,
					$.true,
					$.false,
					$.nil,
					$.scope_resolution,
					$.element_reference,
					alias($._call, $.call),
				),
			),

		_variable: ($) =>
			prec.right(
				choice($.self, $.super, $._nonlocal_variable, $.identifier, $.constant),
			),

		_nonlocal_variable: ($) =>
			choice($.instance_variable, $.class_variable, $.global_variable),

		comment: (_) =>
			token(
				prec(
					PREC.COMMENT,
					choice(
						seq("#", /.*/),
						seq(
							/=begin.*\r?\n/,
							repeat(choice(/[^=]/, /=[^e]/, /=e[^n]/, /=en[^d]/)),
							/[\s*]*=end.*/,
						),
					),
				),
			),

		integer: (_) =>
			/0[bB][01](_?[01])*|0[oO]?[0-7](_?[0-7])*|(0[dD])?\d(_?\d)*|0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
		super: (_) => "super",
		self: (_) => "self",
		false: (_) => "false",
		constant: (_) => token(seq(/[A-Z]/, IDENTIFIER_CHARS)),
		identifier: (_) => token(seq(LOWER_ALPHA_CHAR, IDENTIFIER_CHARS)),
		instance_variable: (_) => token(seq("@", ALPHA_CHAR, IDENTIFIER_CHARS)),
		class_variable: (_) => token(seq("@@", ALPHA_CHAR, IDENTIFIER_CHARS)),

		global_variable: (_) =>
			token(
				seq(
					"$",
					choice(
						seq("-", choice(/[0-9]/, ALPHA_CHAR)),
						/[!@&`'+~=/\\,;.<>*$?:"]/,
						/[0-9]+/,
						seq(ALPHA_CHAR, IDENTIFIER_CHARS),
					),
				),
			),

		chained_string: ($) => seq($.string, repeat1($.string)),

		character: (_) =>
			/\?(\\\S(\{[0-9A-Fa-f]*\}|[0-9A-Fa-f]*|-\S([MC]-\S)?)?|\S)/,

		interpolation: ($) =>
			choice(
				seq("#{", optional($._statements), "}"),
				seq($._short_interpolation, $._nonlocal_variable),
			),
